--- a/web/styles.css
+++ b/web/styles.css
@@ -96,18 +96,7 @@ html, body {
     -ms-flex-align: center;
     align-items: center;
 }
-.demo-chart:nth-child(1) {
-    color: rgb(117,117,117);
-}
-.demo-chart:nth-child(2) {
-    color: #00BBD6;
-}
-.demo-chart:nth-child(3) {
-    color: #BA65C9;
-}
-.demo-chart:nth-child(4) {
-    color: #EF3C79;
-}
+
 .demo-graphs {
     padding: 16px 32px;
     display: -webkit-flex;
